add Dokumentation and update action
